syntax = "proto3";

package controlpb;

option go_package = "./;controlpb";

message Command {
    string uid = 1;
    Node node = 2;
    Unsubscribe unsubscribe = 3;
    Disconnect disconnect = 4;
    Shutdown shutdown = 5;
    SurveyRequest survey_request = 6;
    SurveyResponse survey_response = 7;
    Subscribe subscribe = 8;
    Notification notification = 9;
    Refresh refresh = 10;
}

message Shutdown {}

message Node {
    string uid = 1;
    string name = 2;
    string version = 3;
    uint32 num_clients = 4;
    uint32 num_users = 5;
    uint32 num_channels = 6;
    uint32 uptime = 7;
    Metrics metrics = 8;
    bytes data = 9;
    uint32 num_subs = 10;
}

message Subscribe {
    string user = 1;
    string channel = 2;
    bool emit_presence = 3;
    int64 expire_at = 5;
    bytes channel_info = 8;
    string client = 9;
    bytes data = 10;
}

message Unsubscribe {
    string channel = 1;
    string user = 2;
    string client = 3;
    string session = 4;
    uint32 code = 5;
    string reason = 6;
}

message Disconnect {
    string user = 1;
    repeated string whitelist = 2;
    uint32 code = 3;
    string reason = 4;
    bool reconnect = 5;
    string client = 6;
    string session = 7;
}


message Notification {
    string op = 1;
    bytes data = 2;
}

message Refresh {
    string user = 1;
    string client = 2;
    bool expired = 3;
    int64 expire_at = 4;
    bytes info = 5;
}
